<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99C9F8"
    android:orientation="horizontal"
    tools:context="com.example.android.axer.MainActivity">
    <!--MAIN BODY-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <!--TOP TITLE BAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/bullseye_content_description"
                android:src="@drawable/bullseye" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_blue_dark" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/bullseye_content_description"
                android:src="@drawable/bullseye" />
        </LinearLayout>


        <!--Column Container-->
        <LinearLayout
            android:id="@+id/columns"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <!--Column for Team A-->

            <LinearLayout style="@style/column_style">


                <TextView
                    style="@style/team_name_style"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/team_score_style"
                    android:text="@string/_0a" />


                <Button
                    android:id="@+id/button1pointa"
                    style="@style/score_1_point_style"
                    android:onClick="button1pointa"
                    android:text="@string/one_point" />

                <Button
                    android:id="@+id/button3pointsa"
                    style="@style/score_3_points_style"
                    android:onClick="button3pointsa"
                    android:text="@string/three_points" />

                <Button
                    android:id="@+id/button5pointsa"
                    style="@style/score_5_points_style"
                    android:onClick="button5pointsa"
                    android:text="@string/five_points" />

                <Button
                    android:id="@+id/buttonClutcha"
                    style="@style/score_clutch_style"
                    android:onClick="buttonClutcha"
                    android:text="@string/clutch" />
            </LinearLayout>
            <!--Column for Ruler-->
            <LinearLayout style="@style/column_for_ruler_style" />

            <!--Column for Team B-->

            <LinearLayout style="@style/column_style">


                <TextView
                    style="@style/team_name_style"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/team_score_style"
                    android:text="@string/_0b" />


                <Button
                    android:id="@+id/button1pointb"
                    style="@style/score_1_point_style"
                    android:onClick="button1pointb"
                    android:text="@string/one_point" />

                <Button
                    android:id="@+id/button3pointsb"
                    style="@style/score_3_points_style"
                    android:onClick="button3pointsb"
                    android:text="@string/three_points" />

                <Button
                    android:id="@+id/button5pointsb"
                    style="@style/score_5_points_style"
                    android:onClick="button5pointsb"
                    android:text="@string/five_points" />

                <Button
                    android:id="@+id/buttonClutchb"
                    style="@style/score_clutch_style"
                    android:onClick="buttonClutchb"
                    android:text="@string/clutch" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/newGame"
            style="@style/team_score_style"
            android:layout_marginTop="8dp"
            android:onClick="NewRound"
            android:text="@string/new_round" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/read_the_rules_at"
                android:textSize="12sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/www_nationalaxe_com"
                android:textSize="12sp" />


        </LinearLayout>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:contentDescription="@string/crossed_axes_content_description"
            android:src="@drawable/axes" />
    </LinearLayout>

</ScrollView>


